use headers instead of cookies